--- a/templates/postgresql.conf.j2
+++ b/templates/postgresql.conf.j2
@@ -23,6 +23,17 @@ lc_numeric = 'en_US.UTF-8'
 lc_time = 'en_US.UTF-8'				
 default_text_search_config = 'pg_catalog.english'
 
+# PgBadger Setting for log analysis 
+log_line_prefix = '%t [%p]: [%l-1] user=%u,db=%d,app=%a,client=%h '
+log_min_duration_statement = 0
+log_checkpoints = on
+log_connections = on
+log_disconnections = on
+log_lock_waits = on
+log_temp_files = 0
+log_autovacuum_min_duration = 0
+log_error_verbosity = default
+
 # PgTune Settings
 # max_connections = 64
 max_connections = {{ max_conn }}
